feat: Add visual issue reporting and export
This commit introduces the functionality for users to report visual or layout issues they encounter while reading articles. It integrates with the Gemini API to analyze the reported problem based on the article's HTML content and the user's description.

Additionally, it adds basic support for exporting saved articles, enabling users to back up their curated knowledge. The necessary dependencies and types have been updated to support these new features.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-error-boundary": "https://aistudiocdn.com/react-error-boundary@^6.0.0",
-    "marked": "https://aistudiocdn.com/marked@^16.4.1"
+    "marked": "https://aistudiocdn.com/marked@^16.4.1",
+    "jszip": "https://aistudiocdn.com/jszip@^3.10.1"
   }
 }
 </script>
